# router/encryption_routes.go
@@ -5,7 +5,6 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-
 func encryptionRoutes(router *gin.Engine, basePath string, pathResource string) {
 
 	encryption := router.Group(basePath + pathResource)
@@ -13,6 +12,7 @@ func encryptionRoutes(router *gin.Engine, basePath string, pathResource string) 
 		encryption.POST("/upload_file", handler.UploadFile)
 		encryption.POST("/upload_key", handler.UploadKey)
 		encryption.POST("/decrypt_file", handler.DecryptFile)
+		encryption.POST("/search_file", handler.SearchFile)
 		encryption.POST("/saved_file", handler.SavedFile)
 	}
 }
